# Polytope4D

./: .gitignore  Cargo.toml  README.md
objects/: Cargo.toml
objects/src/: camera.rs  cell.rs  lib.rs  object.rs  rotation.rs  vector.rs
source/: Cargo.toml
source/src/: angle.rs  cell.rs  display.rs  edge.rs  face.rs  field.rs  main.rs  mod.rs  rotation.rs  vec3f.rs  vec4f.rs  window.rs
src/: angle.rs  button.rs  cursor.rs  draw.rs  error.rs  events.rs  fragment.frag  import.rs  main.rs  save.rs  vertex.vert
src/objects/: axes.rs  camera.rs  comparison.rs  display.rs  edge.rs  face.rs  mod.rs  object.rs  rotation.rs  vector.rs
src/window/: field.rs  window.rs
window/: Cargo.toml
window/src/: field.rs  lib.rs  window.rs
