[package]
name = "polytope_4d"
version = "0.1.0"
authors = ["javaharlalnehru <grechanichenkos@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.15"
rfd = "0.8.2"
hex = "0.4.3"
rdev = "0.5.1"
lazy_static = "1.4.0"